手机版确认版

--- a/线框图jpg/论坛_07_04/论坛_0705/ASUWatch社区.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/ASUWatch社区.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-    <title>cast_ii_社区</title>
+    <title>一数论坛</title>
+    <link rel="shortcut icon" href="img/logoicon.ico" /><!-- 标题栏LOGO -->
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/pagination.css" rel="stylesheet">
@@ -27,7 +28,7 @@
                         </a>
                     </li>
                     <li class="active">
-                        <a href="cast_ii_社区.html">ASU Watch 社区
+                        <a href="ASUWatch社区.html">ASUWatch 社区
                             
                         </a>
                     </li>
@@ -73,10 +74,10 @@
                 <div class="left_top">
                     <div class="left_title">
                         <div class="title_img">
-                            <a href="#" target="_blank">
+                            <span>
                                 <img src="img/cast_title.png" />
-                            </a>
-                            <a class="cast2_title h1" href="#" target="_blank">ASU Watch</a>
+                            </span>
+                            <a class="cast2_title h1" href="#" target="_blank">ASUWatch</a>
                         </div>
 
                     </div>
@@ -85,9 +86,6 @@
                             <a href="#">
                                 <strong>全部</strong>
                             </a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#">产品体验</a>
                         </li>
                         <li role="presentation">
                             <a href="#">产品体验</a>
