--- a/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/帖子详情.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/帖子详情.html
@@ -14,7 +14,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li><a href="论坛首页.html">论坛首页</a></li>
             <li><a href="cast_i_社区.html">Cast I 社区</a></li>
-            <li><a href="cast_ii_社区.html">Cast II 社区</a></li>
+            <li><a href="ASUWatch社区.html">ASUWatch 社区</a></li>
             <li><a href="">软件下载</a></li>
             <li><a href="服务.html">服务</a></li>
             <li class="active"><a href="活动列表.html">活动</a></li>
