--- a/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/技术支持.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/技术支持.html
@@ -16,7 +16,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li><a href="产品论坛.html">产品</a></li>
             <li><a href="技术支持.html">技术支持</a></li>
-            <li><a href="cast_ii_社区.html">案例展示</a></li>
+            <li><a href="ASUWatch社区.html">案例展示</a></li>
             <li><a href="#">进入商城</a></li>
             <li ><a href="#">官网</a></li> 
 			<li >
