--- a/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/活动.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/活动.html
@@ -28,7 +28,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="cast_ii_社区.html">Cast II 社区
+                        <a href="ASUWatch社区.html">ASUWatch 社区
                             
                         </a>
                     </li>
