--- a/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/规则.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/规则.html
@@ -17,7 +17,7 @@
         <div class="navbar-header"> <a href="#"> <img class="logo" alt="Brand" src="img/logo.png"> </a> </div>
          <ul class="nav navbar-nav navbar-right">
             <li ><a href="论坛首页.html">论坛首页</a></li> 
-            <li ><a href="cast_ii_社区.html">Cast II 社区</a></li>
+            <li ><a href="ASUWatch社区.html">ASUWatch 社区</a></li>
             <li class="active"><a href="活动列表.html">活动</a></li>
             <li ><a href="服务.html">服务</a></li> 
             <li><a href="#">进入商城</a></li>
