--- a/线框图jpg/论坛_07_04/论坛_0705/活动列表.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/活动列表.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-    <title>活动列表</title>
+    <title>一数论坛</title>
+    <link rel="shortcut icon" href="img/logoicon.ico" /><!-- 标题栏LOGO -->
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/pagination.css" rel="stylesheet">
@@ -27,7 +28,7 @@
                             </a>
                     </li>
                     <li>
-                        <a href="cast_ii_社区.html">Cast II 社区  </a>
+                        <a href="ASUWatch社区.html">ASUWatch 社区  </a>
                     </li>
                     <li class="active">
                         <a href="活动列表.html">活动
@@ -67,12 +68,20 @@
     <div class="container container_custom">
         <div class="row">
             <div class="col-sm-7 col-md-8 col-lg-9 cast_ii_left">
-                <div class="left_nav">
+                <div class="left_top">
+                    <div class="left_title">
+                        <div class="title_img">
+                            <span>
+                                <img src="img/activity.png" />
+                            </span>
+                            <a class="cast2_title h1" href="#" target="_blank">活动</a>
+                        </div>
 
+                    </div>
                     <ul class="nav nav-tabs">
                         <li role="presentation">
                             <a href="#">
-                                <strong class="font_color">全部</strong>
+                                <strong>全部</strong>
                             </a>
                         </li>
                         <li role="presentation">
@@ -81,7 +90,6 @@
                         <li role="presentation">
                             <a href="#">同城活动</a>
                         </li>
-
                     </ul>
                 </div>
                 <div class="left_bottom">
