--- a/线框图jpg/论坛_07_04/论坛_0705/论坛首页.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/论坛首页.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-    <title>论坛首页</title>
+    <title>一数论坛</title>
+    <link rel="shortcut icon" href="img/logoicon.ico" /><!-- 标题栏LOGO -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/swiper.css" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
@@ -28,7 +29,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="cast_ii_社区.html">Cast II 社区
+                        <a href="ASUWatch社区.html">ASUWatch 社区
                             
                         </a>
                     </li>
@@ -94,7 +95,7 @@
         </div>
         <div class="main row">
             <!-- 主体内容左侧**开始 -->
-            <div class="col-sm-7 col-md-8 col-lg-9 left">
+            <div class="col-md-8 col-lg-9 left">
 
                 <!-- 主体左侧下拉菜单**开始 -->
                 <div class="left_subnav">
@@ -142,15 +143,16 @@
                         </a>
                     </div>
                 </div>
+                <div class="gradual"></div>
                 <!-- 主体左侧下拉菜单**结束 -->
 
                 <div class="hot row">
-                    <div class="hot_img col-sm-2 col-md-2 col-lg-1">
+                    <div class="hot_img col-md-2 col-lg-1">
                         <a href="#" target="_blank">
                             <img src="img/li_1.png" />
                         </a>
                     </div>
-                    <div class="col-sm-10 col-md-10 col-lg-11 hot_con_wrap">
+                    <div class="col-md-10 col-lg-11 hot_con_wrap">
                         <div class="hot_con">
                             <div class="title">
                                 <a class="title_1 h4" href="帖子详情.html">标题点击进入</a>
@@ -175,12 +177,12 @@
                     </div>
                 </div>
                 <div class="hot row">
-                    <div class="hot_img col-sm-2 col-md-2 col-lg-1">
+                    <div class="hot_img col-md-2 col-lg-1">
                         <a href="#" target="_blank">
                             <img src="img/li_1.png" />
                         </a>
                     </div>
-                    <div class="col-sm-10 col-md-10 col-lg-11 hot_con_wrap">
+                    <div class="col-md-10 col-lg-11 hot_con_wrap">
                         <div class="hot_con">
                             <div class="title">
                                 <a class="title_red h4" href="帖子详情.html">标题点击进入</a>
@@ -204,12 +206,12 @@
                     </div>
                 </div>
                 <div class="hot row">
-                    <div class="hot_img col-sm-2 col-md-2 col-lg-1">
+                    <div class="hot_img col-md-2 col-lg-1">
                         <a href="#" target="_blank">
                             <img src="img/li_1.png" />
                         </a>
                     </div>
-                    <div class="col-sm-10 col-md-10 col-lg-11 hot_con_wrap">
+                    <div class="col-md-10 col-lg-11 hot_con_wrap">
                         <div class="hot_con">
                             <div class="title">
                                 <a class="title_red h4" href="帖子详情.html">标题点击进入</a>
@@ -232,12 +234,12 @@
                     </div>
                 </div>
                 <div class="hot row">
-                    <div class="hot_img col-sm-2 col-md-2 col-lg-1">
+                    <div class="hot_img col-md-2 col-lg-1">
                         <a href="#" target="_blank">
                             <img src="img/li_1.png" />
                         </a>
                     </div>
-                    <div class="col-sm-10 col-md-10 col-lg-11 hot_con_wrap">
+                    <div class="col-md-10 col-lg-11 hot_con_wrap">
                         <div class="hot_con">
                             <div class="title">
                                 <a class="title_red h4" href="帖子详情.html">标题点击进入</a>
@@ -261,12 +263,12 @@
                     </div>
                 </div>
                 <div class="hot row">
-                    <div class="hot_img col-sm-2 col-md-2 col-lg-1">
+                    <div class="hot_img col-md-2 col-lg-1">
                         <a href="#" target="_blank">
                             <img src="img/li_1.png" />
                         </a>
                     </div>
-                    <div class="col-sm-10 col-md-10 col-lg-11 hot_con_wrap">
+                    <div class="col-md-10 col-lg-11 hot_con_wrap">
                         <div class="hot_con">
                             <div class="title">
                                 <a class="title_red h4" href="帖子详情.html">标题点击进入</a>
@@ -290,12 +292,12 @@
                     </div>
                 </div>
                 <div class="hot row">
-                    <div class="hot_img col-sm-2 col-md-2 col-lg-1">
+                    <div class="hot_img col-md-2 col-lg-1">
                         <a href="#" target="_blank">
                             <img src="img/li_1.png" />
                         </a>
                     </div>
-                    <div class="col-sm-10 col-md-10 col-lg-11 hot_con_wrap">
+                    <div class="col-md-10 col-lg-11 hot_con_wrap">
                         <div class="hot_con">
                             <div class="title">
                                 <a class="title_blue h4" href="帖子详情.html">标题点击进入</a>
@@ -361,7 +363,7 @@
             <!-- 主体内容左侧**结束 -->
 
             <!-- 主体内容右侧**开始 -->
-            <div class="col-sm-5 col-md-4 col-lg-3 right">
+            <div class="col-md-4 col-lg-3 right">
                 <!-- 搜索框**开始 -->
                 <form>
                     <input type="text" class="search" placeholder="搜索" aria-describedby="basic-addon1">
