--- a/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/开发者论坛.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/开发者论坛.html
@@ -14,11 +14,11 @@
         <ul class="nav navbar-nav navbar-right">
             <li><a href="">产品</a></li>
             <li><a href="">技术支持</a></li>
-            <li><a href="cast_ii_社区.html">案例展示</a></li>
+            <li><a href="ASUWatch社区.html">案例展示</a></li>
             <li><a href="#">进入商城</a></li>
             <li ><a href="#">官网</a></li> 
 			<li ><a href="#">登录</a></li> 
-			<li ><a href="#">申请成为开发者</a></li> 
+			<li ><a href="#">申请成为开发者</a></li>
         </ul>
     </div>
 </nav>
