--- a/线框图jpg/论坛_07_04/论坛_0705/发帖.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/发帖.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-    <title>论坛首页|发帖</title>
+    <title>一数论坛</title>
+    <link rel="shortcut icon" href="img/logoicon.ico" /><!-- 标题栏LOGO -->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="js/plugins/rich/jquery-te-1.4.0.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
@@ -27,7 +28,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="cast_ii_社区.html">Cast II 社区
+                        <a href="ASUWatch社区.html">ASUWatch 社区
                             
                         </a>
                     </li>
