--- a/线框图jpg/论坛_07_04/论坛_0705/服务.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/服务.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-    <title>论坛|服务</title>
+    <title>一数论坛</title>
+    <link rel="shortcut icon" href="img/logoicon.ico" /><!-- 标题栏LOGO -->
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/pagination.css" rel="stylesheet">
@@ -27,7 +28,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="cast_ii_社区.html">Cast II 社区
+                        <a href="ASUWatch社区.html">ASUWatch 社区
                             
                         </a>
                     </li>
