--- a/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_板块首页.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_板块首页.html
@@ -17,7 +17,7 @@
     <!-- 页眉**开始 -->
     <header class="clearfix">
             <div class="pull-left"> 
-                <a href="#"><img class="logo" alt="Brand" src="../img/logo-01.png"></a>一数社区
+                <a href="#"><img class="logo" alt="Brand" src="../img/logo.png"></a>一数社区
             </div>
             <i class="fa fa-search fa-pull-right" aria-hidden="true"></i>
     </header>
